fixed up spacing in the project cards

--- a/style.css
+++ b/style.css
@@ -214,13 +214,13 @@ body {
   grid-template-rows: auto 1fr 1fr;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-auto-rows: 1fr;
-  gap: 2rem 1rem;
+  gap: 2rem 2rem;
 }
 
 .main .projects > h3 {
   font-size: 1.6rem;
   font-weight: 700;
-  margin: 0 0 -1.5rem 0;
+  margin: 0 0 0.1rem 0;
   grid-column: 1 / -1;
 }
 
@@ -244,12 +244,13 @@ body {
 }
 
 .main .projects .project .text {
-  padding: 1rem 1rem 0 1rem;
+  padding: 1rem 1rem 1rem 1rem;
 }
 
 .main .projects .project .text > h6 {
   font-size: 1.2rem;
   font-weight: 700;
+  padding: 1rem 0 1rem 0;
   margin: 0;
 }
 
